--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  --cor-azul-escuro: #374b53;
+  --cor-verde: #6d887d;
+  --cor-cinza-azulado: #6e848d;
+  --cor-branco: #ffffff;
+  --cor-cinza-claro: #f3f3f3;
+}
