--- a/src/app/pages/cadastro/cadastro.component.css
+++ b/src/app/pages/cadastro/cadastro.component.css
@@ -9,20 +9,21 @@
 
 .cadastro-left {
   flex: 1;
-  background: #42575f;
+  background: #374b53;
   color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 16px 0 0 16px;
+  height: 460px;
   min-width: 320px;
   max-width: 400px;
   padding: 40px 20px;
 }
 
 .logo {
-  width: 180px;
+  width: 300px;
   margin-bottom: 2rem;
 }
 
@@ -41,6 +42,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 460px;
   min-width: 350px;
   max-width: 480px;
   padding: 40px 32px;
