--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <div class="cadastro-container">
   <div class="cadastro-left">
-    <img src="assets/logo-joinville.png" alt="Joinville Inova Conectada" class="logo" />
+    <img src="assets/logoJoinville.png" alt="Joinville Inova Conectada" class="logo" />
   </div>
   <div class="cadastro-right">
     <h2>Crie sua conta</h2>
