--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -30,6 +30,6 @@
     </form>
   </div>
   <div class="login-right">
-    <img src="assets/logo-joinville.png" alt="Joinville Inova Conectada" class="logo" />
+    <img src="assets/logoJoinville.png" alt="Joinville Inova Conectada" class="logo" />
   </div>
 </div>
