--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,7 +1,9 @@
 <nav class="navbar">
   <div class="container">
-    <div class="logo-container">
-      <div class="logo-image"></div>
+    <div routerLink="/home" class="logo-container">
+      <div class="logo-image">
+        <img src="assets/images/logo_inova.png" alt="Logo Joinville Inova Conectada">
+      </div>
       <div class="logo-text">
         <div class="logo-main">JOINVILLE</div>
         <div class="logo-sub">INOVA CONECTADA</div>
