--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="container">
-    <div routerLink="/home" class="logo-container">
+    <div routerLink="" class="logo-container">
       <div class="logo-image">
         <img src="assets/images/logo_inova.png" alt="Logo Joinville Inova Conectada">
       </div>
