--- a/src/app/pages/cadastro/cadastro.component.css
+++ b/src/app/pages/cadastro/cadastro.component.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: url('/assets/bg-cadastro.jpg') no-repeat center center fixed;
+  background: url('/assets/images/') no-repeat center center fixed;
   background-size: cover;
 }
 
