--- a/src/app/pages/esqueci-senha/esqueci-senha.component.html
+++ b/src/app/pages/esqueci-senha/esqueci-senha.component.html
@@ -1,6 +1,6 @@
 <div class="esqueci-container">
   <div class="esqueci-left">
-    <img src="assets/logoJoinville.png" alt="Joinville Inova Conectada" class="logo" />
+    <img src="assets/images/logo_inova.png" alt="Joinville Inova Conectada" class="logo" />
   </div>
   <div class="esqueci-right">
     <h2>Esqueceu sua senha?</h2>
