--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,13 +1,13 @@
 <footer class="footer">
   <div class="container footer-content">
-  <div class="footer-left">
+  <a href="/" class="footer-left">
     <img src="assets/images/logo_inova.png" alt="Logo Joinville Inova Conectada" class="footer-logo">
     <p class="footer-text">
       Joinville<br>
       Inova<br>
       Conectada
     </p>
-  </div>
+  </a>
     <div class="footer-center">
       <a href="/ajuda">PERGUNTAS FREQUENTES</a>
       <a href="/mapa">MAPA</a>
