continuei o perfil e mexi na navbar para ir para tela de login

--- a/src/app/pages/perfil/perfil.component.css
+++ b/src/app/pages/perfil/perfil.component.css
@@ -1,6 +1,6 @@
 .perfil-bg {
   min-height: 100vh;
-  background: #222;
+  background: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
