--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -32,6 +32,10 @@
         <span>Deletar conta</span>
         <small>Atenção! Essa é uma opção permanente e não pode ser desfeita.</small>
       </div>
+      <div class="perfil-botoes">
+        <button type="button" class="btn-terciario" (click)="descartar()">DESCARTAR</button>
+        <button type="submit" class="btn-secundario">SALVAR</button>
+      </div>
     </form>
   </div>
 </div>
