--- a/src/app/pages/esqueci-senha/esqueci-senha.component.css
+++ b/src/app/pages/esqueci-senha/esqueci-senha.component.css
@@ -3,9 +3,35 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: url('/assets/bg-cadastro.jpg') no-repeat center center fixed;
   background-size: cover;
+  position: relative;
 }
+
+.esqueci-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url('/assets/images/background-register.png') no-repeat center center;
+  background-size: cover;
+  transform: scale(1.05);
+  filter: blur(5px);
+  z-index: -1;
+}
+
+.esqueci-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: -1;
+}
+
 
 .esqueci-left {
   flex: 1;
