feat: melhora estilo da pagina area-do-usuario

--- a/src/app/pages/area-do-usuario/area-do-usuario.html
+++ b/src/app/pages/area-do-usuario/area-do-usuario.html
@@ -37,7 +37,8 @@
         <h2 class="section-title">Meus Perfis</h2>
         <div class="dashboard-list">
           <div class="dashboard-item">
-            <div>
+            <div class="profile">
+              <img src="assets/images/homesection1.jpg" alt="Foto de Perfil" class="profile-photo">
               <strong>Perfil: João Silva</strong>
               <span class="status status-ativo">Ativo</span>
             </div>
@@ -47,7 +48,8 @@
             </div>
           </div>
           <div class="dashboard-item">
-            <div>
+            <div class="profile">
+              <img src="assets/images/logo_inova.png" alt="Foto de Perfil" class="profile-photo">
               <strong>Perfil: Startup XYZ</strong>
               <span class="status status-pendente">Pendente</span>
             </div>
@@ -64,17 +66,19 @@
         <h2 class="section-title">Meus Eventos</h2>
         <div class="dashboard-list">
           <div class="dashboard-item">
-            <div>
+            <img src="assets/images/homesection2.jpg" alt="Evento" class="event-photo">  
+            <div class="event">
               <strong>Evento: Meetup Inovação</strong>
               <span class="status status-ativo">Publicado</span>
-            </div>
+            </div> 
             <div class="dashboard-actions">
               <button class="secondary-button"><i class="fas fa-edit"></i> Editar</button>
               <button class="secondary-button"><i class="fas fa-times"></i> Cancelar</button>
             </div>
           </div>
           <div class="dashboard-item">
-            <div>
+            <img src="assets/images/homesection1.jpg" alt="Evento" class="event-photo">  
+            <div class="event">
               <strong>Evento: Hackathon 2025</strong>
               <span class="status status-cancelado">Cancelado</span>
             </div>
@@ -91,7 +95,8 @@
         <h2 class="section-title">Minhas Inscrições</h2>
         <div class="dashboard-list">
           <div class="dashboard-item">
-            <div>
+            <img src="assets/images/homesection2.jpg" alt="Evento" class="event-photo">  
+            <div class="event">
               <strong>Evento: Meetup Inovação</strong>
               <span class="status status-inscrito">Inscrito</span>
             </div>
@@ -101,7 +106,8 @@
             </div>
           </div>
           <div class="dashboard-item">
-            <div>
+            <img src="assets/images/banner_institutionalpages.png" alt="Evento" class="event-photo">  
+            <div class="event">
               <strong>Evento: Workshop Startups</strong>
               <span class="status status-inscrito">Inscrito</span>
             </div>
