--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,9 @@
 
 :root {
   font-family: 'Montserrat', sans-serif;
+
+  --fonte-secundaria: 'Poppins', sans-serif;
+
   --cor-azul-escuro: #374b53;
   --cor-verde: #6d887d;
   --cor-cinza-azulado: #6e848d;
